--- a/starter/index.html
+++ b/starter/index.html
@@ -18,7 +18,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
-<body class="hold-transition sidebar-mini layout-navbar-fixed">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed">
+<!-- <body class="hold-transition sidebar-mini layout-navbar-fixed"> -->
 <div class="wrapper">
 
   <!-- Navbar -->
